syntax = "proto3";

option java_package = "com.katdmy.timer";
option java_multiple_files = true;

message TimerSettings {
  uint32 roundSet = 1;
  uint32 workSecondsSet = 2;
  uint32 restSecondsSet = 3;
}